--- a/connection-profile-wbrta.yaml
+++ b/connection-profile-wbrta.yaml
@@ -4,7 +4,7 @@ client:
   organization: wbrta
 
   logging:
-    level: debug
+    level: info
 
   # Global configuration for peer, event service and orderer timeouts
   # if this this section is omitted, then default values will be used (same values as below)
@@ -37,9 +37,9 @@ client:
     path: /home/blockchain/projects/cartrack/network/crypto-config
 
   credentialStore:
-    path: "./tmp/state-store"
+    path: "./tmpwrta/state-store"
     cryptoStore:
-      path: ./tmp/msp
+      path: ./tmpwrta/msp
 
    # BCCSP config for the client. Used by GO SDK.
   BCCSP:
@@ -166,8 +166,8 @@ entityMatchers:
     
   orderer:
     - pattern: orderer.carscm.net
-      urlSubstitutionExp: orderer.carscm.net:9050
-      eventUrlSubstitutionExp: orderer.carscm.net:9050
+      urlSubstitutionExp: orderer.carscm.net:7050
+      eventUrlSubstitutionExp: orderer.carscm.net:7050
       sslTargetOverrideUrlSubstitutionExp: orderer.carscm.net
       mappedHost: orderer.carscm.net
       
